# places-hrsn-analysis

./: .gitignore  Makefile  README.md  environment.yml  pyproject.toml
configs/: params.yml
docs/: summary.md
scripts/analyze/: 07_eda.py  07b_maps.py  08_run_regressions.py  09_mutually_adjusted.py  10_factor_analysis.py  11_factor_regressions.py  14_brfss_regressions.py  15_spatial_autocorrelation.py  15b_spatial_error_sensitivity.py  16_gwr_analysis.py  18_svi_comparison.py  19_disparity_decomposition.py  20_heterogeneity_explained.py  21_contextual_effects.py  23_validation_framework.py  24_attenuation_analysis.py  25_cross_validation.py  26_policy_simulation.py  27_dose_response.py  28_spatial_cross_validation.py  29_evalue_analysis.py  30_factor_ob_decomposition.py  31_variance_decomposition.py  35_shap_importance.py  36_mediation_analysis.py  37_mortality_validation.py  41_enhanced_validation.py  42_cfa_validation.py  43_individual_ob_all_outcomes.py  44_ob_threshold_sensitivity.py
scripts/collect/: 01_download_places.py  02_download_census.py  03_download_shapefiles.py  12_download_brfss.py  17_download_svi.py  22_download_cms_medicare.py  32_download_ejscreen.py  33_download_food_access.py  34_process_cdc_wonder.py  38_download_social_capital.py  39_download_eviction_lab.py  40_process_food_access_v5.py
scripts/process/: 04_reshape_places.py  05_process_census.py  06_merge_datasets.py  13_process_brfss.py
src/hrsn_analysis/: __init__.py  io_utils.py  logging_utils.py  paths.py  regression_utils.py  survey_utils.py
tests/: __init__.py
